# aleph

./: .audit_detalle.tmp  .audit_final.tmp  .audit_motor.tmp  .audit_regresion.tmp  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  GEMINI.md  NORTE_TABLEROS.md  README.md  _audit_nav.py  app.py  charts.py  deploy_api.ps1  deploy_api.sh  deploy_streamlit.ps1  deploy_streamlit.sh  dev.ps1  dev.sh  dev_api.ps1  dev_api.sh  migrate_db.ps1  migrate_db.sh  nav_audit.txt  nav_resultado.txt  navarra_data.py  pyproject.toml  requirements.txt  startup.sh  storage.py  suma_cap.txt  sync_docs.ps1  sync_docs.sh  (+2 more)
.github/workflows/: ci.yml  macro_refresh.yml
.streamlit/: config.toml  secrets.toml.example
api/: DEPLOY.md  README.md  pyproject.toml
api/aleph_api/: __init__.py  actuals.py  auth.py  build.py  fuentes_live.py  macro_store.py  main.py  repo.py  write.py
api/aleph_api/conectores/: __init__.py  banrep.py  base.py  damodaran.py  sinco.py  socrata.py
api/tests/: test_actuals.py  test_api.py  test_auth.py  test_banrep.py  test_conector_sinco.py  test_conectores.py  test_damodaran.py  test_fuentes_live.py  test_macro_store.py
app_streamlit/: .gitignore  DEPLOY_AZURE.md  README.md  REESTRUCTURACION.md  app.py  pyproject.toml  storage.py
app_streamlit/.streamlit/: config.toml  secrets.toml.example
app_streamlit/cg_engine/: __init__.py  errors.py  portafolio.py
app_streamlit/execution/: snapshot_dorado.py
app_streamlit/proyectos/: 1_navarra.json  2_dominica.json  3_torres_campinas.json
app_streamlit/tests/: test_anclas.py  test_auth.py  test_finanzas.py  test_golden_snapshot.py  test_nav.py  test_schema.py  test_storage.py  test_ui_format.py  test_ui_humo.py
app_streamlit/tests/golden/: 1_navarra_snapshot.json  2_dominica_snapshot.json  3_torres_campinas_snapshot.json
app_streamlit/ui/: __init__.py  auth.py  format.py  nav.py
branding/: README.md
cg_engine/: __init__.py  apalancamiento.py  config.py  evm.py  modelo.py  schema.py
data/: navarra_data.py
data/proyectos/: 1_navarra.json  2_dominica.json  3_torres_campinas.json
db/: README.md  etl_actuals_sinco.py  etl_import_v1.py  push_proyecto.py  refresh_scenarios.py
db/migrations/: 0001_aleph_schema.sql  0002_concurrencia_inmutabilidad.sql  0003_supuestos_macro.sql  0004_actuals_obra.sql  0005_actuals_obra_clave_upsert.sql
db/samples/: sinco_control_proyecto_sample.json
directives/: analizar_prefactibilidad.md  app_factibilidad.md  depuracion_repo.md  plan_escritura.md  plan_migracion.md  prompts_migracion_v3.md  spec_pyg_dinamico.md
docs/: M6_supuestos_macro_setup.md  README.md  acta_argos_flujo_fcl_20260627.md  acta_correccion_vis_20260614.md  acta_flujo_equity_20260614.md  acta_rebaseline_beta_homebuilding_20260616.md  acta_rebaseline_wacc2_betad_rp_20260614.md  acta_rebaseline_wacc_20260614.md  acta_tributario_after_tax_20260620.md  cobertura_camacol.md  hallazgo_beta_sector_20260616.md  historial_aprendizajes.md  ontologia_canonica.md  runbook_sync_wacc_prod.md  sinco_actuals_setup.md
docs/adr/: 0001-estrangulamiento-progresivo.md  0002-monorepo-un-solo-repo.md  0003-snapshot-dorado.md  0004-version-heredada-del-motor.md  0005-deploy-por-sha-imagen-bundle.md
engine/: README.md  __init__.py  apalancamiento.py  curvas.py  evm.py  ingresos.py  modelo.py  portafolio.py  pyproject.toml
engine/aleph_engine/: __init__.py  apalancamiento.py  checks.py  cierre.py  config.py  due_diligence.py  evm.py  finanzas.py  flujo.py  goal_seek.py  ingresos.py  mercado.py  metrics.py  modelo.py  models.py  ontologia.py  portfolio.py  reales.py  schema.py  simulacion.py  supuestos_macro.py  tipologias.py  tributario.py  urbanismo.py  valor.py  vehiculos.py
engine/execution/: __init__.py  diff_dorado.py  snapshot_dorado.py
engine/tests/: __init__.py  _golden.py  test_anclas.py  test_app_extraidos.py  test_checks.py  test_cierre.py  test_diff_dorado.py  test_due_diligence.py  test_evm.py  test_finanzas.py  test_goal_seek.py  test_golden_harness.py  test_mercado.py  test_metrics.py  test_models_contra_snapshots.py  test_ontologia.py  test_portfolio.py  test_reales.py  test_schema.py  test_simulacion.py  test_supuestos_macro.py  test_tipologias.py  test_tributario_after_tax.py  test_tributario_vis.py  test_urbanismo.py  test_valor.py  test_vehiculos_tributario.py
engine/tests/golden/: 1_navarra_snapshot.json  2_dominica_snapshot.json  3_torres_campinas_snapshot.json
execution/: snapshot_dorado.py
proyectos/: 1_navarra.json  2_dominica.json  3_torres_campinas.json  ejemplo.json
teams-app/: README.md  manifest.json
tests/: test_anclas.py  test_finanzas.py  test_golden_snapshot.py  test_schema.py  test_ui_humo.py
tests/golden/: 1_navarra_snapshot.json
ui/: nav.py
web/: .env.example  DEPLOY_WEB.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json
web/public/: teams.html
web/src/: auth.ts  proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx  loading.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/components/: aleph-mark.tsx  banner.tsx  cabina-ceo.tsx  capital-table.tsx  checks-badge.tsx  figure.tsx  funnel-bar.tsx  kpi-card.tsx  mini-stat.tsx  phase-badge.tsx  portfolio-table.tsx  project-context.tsx  section-title.tsx  sidebar.tsx  skeleton.tsx  source-note.tsx  stat.tsx  theme-toggle.tsx  topbar.tsx  valor-banner.tsx
web/src/components/admin/: admin-actions.tsx  admin-menu.tsx
web/src/components/charts/: absorption-chart.tsx  cash-flow-chart.tsx  concentracion-panel.tsx  distribution-histogram.tsx  echart.tsx  gantt-chart.tsx  heatmap-2d.tsx  project-compare.tsx  pyg-waterfall.tsx  recaudo-chart.tsx  scenario-compare.tsx  tesoreria-estres.tsx  today-marker.tsx  tornado-chart.tsx  value-map.tsx
web/src/components/forms/: nuevo-proyecto-form.tsx  (+2 more)
web/src/lib/: actions.ts  api.ts  chart-tokens.ts  echarts-timeline.ts  echarts.ts  format.ts  fuentes.ts  session.ts  timeline.ts  use-is-dark.ts  version.ts
web/src/types/: next-auth.d.ts
(+22 files in other folders)
