# Paquete `aleph_engine`: el motor financiero PURO de ALEPH (Python, sin Streamlit/FastAPI/Supabase).
#
# Estado: PROMPT 3 · bloque 1 — la lógica financiera (calcular/pyg/flujo/WACC/curva S/indicadores/EVM)
# se MOVIÓ tal cual desde `app_streamlit/cg_engine`. El harness dorado (tests/) re-ejecuta el motor y
# exige paridad de cifras (tol. 0.1%). Próximo bloque: repuntar `app_streamlit` a este paquete.
#
# Instalable: una futura integración (API FastAPI, ERP/CRM) lo reutiliza como dependencia
# (`pip install -e ./engine`) sin copiar lógica.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-engine"
dynamic = ["version"]                       # la versión sale de aleph_engine.__version__ (fuente única)
description = "Motor financiero de proyectos inmobiliarios — ALEPH / CG Constructora (núcleo puro)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",            # aleph_engine/schema.py (contrato de datos del proyecto)
    "scipy>=1.13",            # aleph_engine/finanzas.py (TIR/optimización; con fallback si falta)
    "python-dateutil>=2.8",   # aleph_engine/portafolio.py (relativedelta)
]

[tool.setuptools]
packages = ["aleph_engine"]

[tool.setuptools.dynamic]
version = { attr = "aleph_engine.__version__" }   # fuente única de versión del paquete

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]            # importa aleph_engine desde la raíz de /engine sin instalar
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Igual que el motor actual: solo reglas de CORRECTITUD (errores reales), no estilo.
select = ["E9", "F63", "F7", "F82"]
